# docs/swagger.yaml
@@ -268,14 +268,6 @@ paths:
         name: id
         required: true
         type: string
-      - description: Employee ID for personal chat
-        in: query
-        name: colleagueId
-        type: string
-      - description: Flag, group chat or not (true/false)
-        in: query
-        name: is_group
-        type: string
       produces:
       - application/json
       responses:
@@ -289,6 +281,41 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/dto.Error'
+      tags:
+      - Chats
+  /api/v1/chats/user/{user_id}/colleague/{colleague_id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      - description: Colleague ID
+        in: path
+        name: colleague_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: boolean
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.Error'
+      summary: Check if a chat exists
       tags:
       - Chats
   /api/v1/messages:
