# internal/handler/chat_handler.go
@@ -2,7 +2,6 @@ package handler
 
 import (
 	"net/http"
-	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
@@ -22,6 +21,7 @@ func NewChatHandler(controller interfaces.ChatController) interfaces.Handler[dto
 func (h *ChatHandler) ConfigureRoutes(r *gin.Engine) {
 	r.GET("/api/v1/chats", h.Get)
 	r.GET("/api/v1/chats/user/:id", h.GetChatsByUserId)
+	r.GET("/api/v1/chats/user/:id/colleague/:colleague_id", h.PrivateChatExists)
 	r.GET("/api/v1/chats/:id", h.GetOneById)
 	r.POST("/api/v1/chats", h.Create)
 	r.DELETE("/api/v1/chats/:id", h.Delete)
@@ -55,8 +55,6 @@ func (h *ChatHandler) Get(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path string true "User ID"
-// @Param colleagueId query string false "Employee ID for personal chat"
-// @Param is_group query string false "Flag, group chat or not (true/false)"
 // @Success 200 {object} []dto.Chat
 // @Failure 500 {object} dto.Error
 // @Router /api/v1/chats/user/{id} [get]
@@ -72,35 +70,7 @@ func (h *ChatHandler) GetChatsByUserId(c *gin.Context) {
 		return
 	}
 
-	var colleagueId *uuid.UUID = nil
-	colleagueIdStr := c.Query("colleagueId")
-	if colleagueIdStr != "" {
-		parsedColleagueId, err := uuid.Parse(colleagueIdStr)
-		if err != nil {
-			c.JSON(http.StatusBadRequest, dto.Error{
-				Status:      http.StatusBadRequest,
-				Description: "Неверный формат colleagueId",
-			})
-			return
-		}
-		colleagueId = &parsedColleagueId
-	}
-
-	var isGroup *bool = nil
-	isGroupStr := c.Query("is_group")
-	if isGroupStr != "" {
-		parsedBool, err := strconv.ParseBool(isGroupStr)
-		if err != nil {
-			c.JSON(http.StatusBadRequest, dto.Error{
-				Status:      http.StatusBadRequest,
-				Description: "Неверный формат is_group",
-			})
-			return
-		}
-		isGroup = &parsedBool
-	}
-
-	chats, err := h.controller.GetChatsByUserId(ctx, userId, colleagueId, isGroup)
+	chats, err := h.controller.GetChatsByUserId(ctx, userId)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, dto.Error{
 			Status:      http.StatusInternalServerError,
@@ -110,6 +80,50 @@ func (h *ChatHandler) GetChatsByUserId(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, chats)
+}
+
+// PrivateChatExists checks if a chat exists between two users
+// @Summary Check if a chat exists
+// @Tags Chats
+// @Accept json
+// @Produce json
+// @Param user_id path string true "User ID"
+// @Param colleague_id path string true "Colleague ID"
+// @Success 200 {object} map[string]bool
+// @Failure 400 {object} dto.Error
+// @Failure 500 {object} dto.Error
+// @Router /api/v1/chats/user/{user_id}/colleague/{colleague_id} [get]
+func (h *ChatHandler) PrivateChatExists(c *gin.Context) {
+	ctx := c.Request.Context()
+
+	userId, err := uuid.Parse(c.Param("id"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, dto.Error{
+			Status:      http.StatusBadRequest,
+			Description: err.Error(),
+		})
+		return
+	}
+
+	colleagueId, err := uuid.Parse(c.Param("colleague_id"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, dto.Error{
+			Status:      http.StatusBadRequest,
+			Description: err.Error(),
+		})
+		return
+	}
+
+	exists, err := h.controller.PrivateChatExists(ctx, userId, colleagueId)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, dto.Error{
+			Status:      http.StatusInternalServerError,
+			Description: err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"exists": exists})
 }
 
 // GetOneById @Summary Get chat by ID
