# internal/models/interfaces/chat_controller.go
@@ -10,7 +10,8 @@ import (
 
 type ChatController interface {
 	Get(ctx context.Context) ([]*dto.Chat, error)
-	GetChatsByUserId(ctx context.Context, userId uuid.UUID, colleagueId *uuid.UUID, isGroup *bool) ([]*dto.Chat, error)
+	GetChatsByUserId(ctx context.Context, userId uuid.UUID) ([]*dto.Chat, error)
+	PrivateChatExists(ctx context.Context, userId uuid.UUID, colleagueId uuid.UUID) (bool, error)
 	GetOneById(ctx context.Context, id uuid.UUID) (*dto.ChatDetail, error)
 	Create(ctx context.Context, model *dto.ChatCreate) (*dto.CreateAction, error)
 	Delete(ctx context.Context, id uuid.UUID) error
